manifests/deployment.yaml
apiVersion: apps/v1  
kind: Deployment  
metadata:  
  name: wil-playground  
  namespace: dev  
  labels:  
    app: wil-playground  
spec:  
  replicas: 1  
  selector:  
    matchLabels:  
      app: wil-playground  
  template:  
    metadata:  
      labels:  
        app: wil-playground  
    spec:  
      containers:  
      - name: playground-app  
        image: wil42/playground:v1
        ports:  
        - containerPort: 8888
        resources:  
          limits:  
            cpu: "200m"  
            memory: "256Mi"  
          requests:  
            cpu: "100m"  
            memory: "128Mi"
