manifests/service.yaml
apiVersion: v1  
kind: Service  
metadata:  
  name: svc-wil-playground  
  namespace: dev  
spec:  
  selector:  
    app: wil-playground  
  ports:  
  - protocol: TCP  
    port: 8080
    targetPort: 8888
